cotoami_desktop/ui/assets/css/app/_pins.scss
section.pins {
  >header {
    --padding-horizontal: 100px;

    position: relative;
    display: flex;
    flex-direction: row;

    padding-left: var(--padding-horizontal); // to center the title 

    section.coto-toolbar {
      top: 10px;
      left: 20px;
      right: auto;
    }

    section.title {
      flex: 1;

      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: end;

      span.current-cotonoma-name {
        font-size: 1.1rem;
        font-weight: 650;

        img.node-icon {
          width: 20px;
          height: 20px;
          border-radius: 4px;
          margin-right: 8px;
          margin-bottom: 2px;
        }
      }
    }

    section.view-switch {
      width: var(--padding-horizontal);
      padding-right: 20px;

      button {
        position: relative;
        display: inline-block;
        padding: 4px 10px;
        z-index: 10;

        span.material-symbols {
          font-size: 20px;
        }

        &.selected {
          cursor: initial;
          opacity: 1;
          border-bottom: 1px solid var(--focused-border-color);
        }
      }
    }
  }

  >div.body {
    padding-top: 10px;

    // SimpleBar div
    >div {
      width: 100%;
      height: 100%;

      &:not(.simplebar-dragging)>.simplebar-wrapper>.simplebar-mask>.simplebar-offset>.simplebar-content-wrapper {
        scroll-behavior: smooth;
      }
    }
  }

  &:hover {
    >header section.coto-toolbar {
      display: inline-block;
    }
  }

  ol.pins {
    padding-top: 20px;

    li.pin {
      background-color: var(--card-background-color);

      &.just-pinned {
        @keyframes just-pinned {
          0% {
            opacity: 0;
          }

          100% {
            opacity: 1;
          }
        }

        animation: just-pinned 1s linear;
      }
    }

    article.pinned-coto {
      position: relative;
      padding-top: 20px;

      div.pinned {
        display: none;
      }

      button.edit-pin {
        position: absolute;
        top: 3px;
        left: 3px;

        span.material-symbols {
          font-size: 20px;
        }
      }

      div.body {
        position: relative;
      }
    }

    div.links-not-yet-loaded {
      padding-top: 6px;
      padding-bottom: 6px;
      background-color: var(--card-background-color);
      text-align: center;

      div.loading {
        padding-top: 3px;
        height: 30px;
      }

      span.material-symbols {
        font-size: 24px;
      }
    }

    article.sub-coto .body {
      display: flex;
      flex-direction: row;
      align-items: center;

      div.content {
        flex: 1;
      }

      div.links {
        flex: 0 0 30px;
        padding-right: 10px;
      }
    }
  }

  div.document-view {
    --toc-width: 200px;
    container-type: inline-size;
    padding-left: 16px;
    padding-right: 16px;

    div.cotonoma-content {
      max-width: var(--max-article-width);
      margin-top: 8px;
      margin-bottom: 1rem;
      margin-right: auto;
      margin-left: auto;
      padding: 1rem;
      background-color: var(--card-background-color);

      section.media-content {
        margin-bottom: 8px;
        text-align: center;
      }
    }

    div.pins-with-toc {
      max-width: var(--max-article-width);
      margin-right: auto;
      margin-left: auto;

      div.toc {
        display: none;
        height: 80vh;
        padding-right: 10px;

        position: -webkit-sticky;
        position: sticky;
        top: 0;

        // SimpleBar div
        >div {
          width: 100%;
          height: 100%;
        }

        ol.toc {
          width: 100%;

          li.toc-entry {
            opacity: 0.6;

            &.active {
              opacity: 1;
            }

            button {
              width: 100%;
              margin-bottom: 3px;
              padding: 5px 15px;
              font-size: 0.9rem;

              img.node-icon {
                width: 16px;
                height: 16px;
                border-radius: 4px;
                vertical-align: text-bottom;
                margin-right: 5px;
              }

              &:hover {
                background-color: var(--hover-background-color);
              }
            }
          }
        }
      }
    }

    // This warning will be fixed by the release of:
    // https://github.com/microsoft/vscode-css-languageservice/issues/381
    @container (min-width: 50rem) {
      div.pins-with-toc {
        display: flex;
        flex-direction: row;

        max-width: calc(var(--max-article-width) + var(--toc-width));

        ol.pins {
          flex: 1;
        }

        div.toc {
          display: block;
          width: var(--toc-width);
        }
      }
    }

    li.pin {
      margin-bottom: 3rem;
    }

    // Heading font size
    article.coto.has-children {

      section.text-content p:first-child,
      span.summary {
        font-size: 1.1rem;
      }
    }

    // Disable card-background-color in document-view
    article.coto,
    ol.pins ol.sub-cotos>div.links,
    ol.pins ol.sub-cotos>div.links-not-yet-loaded,
    ul.parents {
      background-color: var(--background-color);
    }

    article.coto:hover {
      background-color: var(--hover-background-color);
    }
  }

  .column-view {
    padding-right: 16px;

    .simplebar-content-wrapper {
      overflow-x: auto;
      overflow-y: hidden;

      .simplebar-content {
        height: 100%;
      }
    }

    ol.pins {
      display: flex;
      flex-direction: row;

      height: 100%;
      padding-left: 16px;
    }

    li.pin {
      flex: 1;
      min-width: 400px;
      margin-right: 16px;

      display: flex;
      flex-direction: column;

      .scrollable-sub-cotos {
        min-height: 0; // let this item shrink below the content size

        // SimpleBar div
        >div {
          width: 100%;
          height: 100%;
        }
      }

      ol.sub-cotos {
        padding-top: 16px;
        padding-bottom: 3rem;
      }
    }
  }
}

